--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,18 @@ jobs:
         with:
           python-version: '3.10'
 
+      # Cache pip download/build cache
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pip
+            ./.wheelhouse
+          # Key uses requirements file if present; falls back to workflow run OS+python version
+          key: ${{ runner.os }}-pip-${{ matrix.python-version || '3.10' }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ matrix.python-version || '3.10' }}-
+
       - name: Install system packages (ffmpeg, TeX, cairo, pango)
         run: |
           sudo apt-get update
@@ -33,20 +45,42 @@ jobs:
             texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended \
             dvipng
 
-      - name: Upgrade pip & install Python packages
+      - name: Upgrade pip & install common Python packages (use cached pip where possible)
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install numpy scipy pillow opencv-python tqdm
-          # Install 3b1b's manim directly from GitHub
-          pip install git+https://github.com/3b1b/manim.git
+          # Install some common deps first (should be cached on subsequent runs)
+          pip install --cache-dir ~/.cache/pip numpy scipy pillow opencv-python tqdm
+          # create a wheelhouse dir in case we build wheels for local editable installs
+          mkdir -p ./.wheelhouse
 
-      - name: Render scene with manim
+      - name: Clone 3b1b's manim repo and build wheels (speeds installs)
+        run: |
+          git clone https://github.com/3b1b/manim.git
+          # If manim has a requirements file, install those first (will use pip cache)
+          if [ -f manim/requirements.txt ]; then
+            pip install --cache-dir ~/.cache/pip -r manim/requirements.txt || true
+          fi
+          # Build wheels for manim into a wheelhouse so future runs can just install wheels
+          pip wheel --wheel-dir=./.wheelhouse ./manim || true
+          # Install manim in editable mode but prefer installing from wheelhouse for dependencies
+          pip install --cache-dir ~/.cache/pip -e ./manim
+
+      - name: Render scene (try manim, fallback to manimlib)
         env:
           SCENE_FILE: ${{ inputs.scene_file }}
           SCENE_NAME: ${{ inputs.scene_name }}
         run: |
           # Run from repository root so imports like _2023.* resolve
-          python -m manim "$SCENE_FILE" "$SCENE_NAME" -p -ql
+          if python -c "import manim" 2>/dev/null; then
+            python -m manim "$SCENE_FILE" "$SCENE_NAME" -p -ql
+          elif python -c "import manimlib" 2>/dev/null; then
+            python -m manimlib "$SCENE_FILE" "$SCENE_NAME" -p -ql
+          else
+            echo "No manim or manimlib module found. pip list and python info for debugging:"
+            python -V
+            pip list
+            exit 1
+          fi
 
       - name: List media output (for debug)
         run: ls -R media || true
